[BE] DB 병목 현상 개선 (#65)
* feat(AllStarFacadeService): 기존에 존재하는 팀은 선택 횟수 반영하지 않도록 수정

* feat(PlayerScoreCrawlerService): 점수 반영 트랜잭션 레포지토리로 이전